Update title settings.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: home_index
+title: "Chen Tsu Pei's Blog"
+description: "Share my reading in Machine learning, Natural Language Processing."
 tags: cs, nlp, python, deep-learning, machine-learning, LDA, PCA, CNN, NER, BERT, ALBERT, DistilBERT
 ---
 <div class="container-fluid text-center">
